--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,9 @@ name = django-htmx-extras
 version = 0.1.0
 description = Extras for django-htmx.
 long_description = file: README.md
-long_description_content_type = text/x-rst
+long_description_content_type = text/markdown
 author = Pablo Rivera
-author_email = pr@tinytiny.app
+author_email = support@tinytiny.app
 url = https://github.com/Tiny-Tiny-App/django-htmx-extras/
 project_urls =
     Changelog = https://github.com/Tiny-Tiny-App/django-htmx-extras/HISTORY.md
