add missing options

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,8 @@ install_requires =
 	django-htmx
 python_requires = >=3.6
 zip_safe = False
+include_package_data = True
+packages = find:
 
 [flake8]
 ignore = E203,E501,W503
